test/Fail/Issue759a.err
Issue759a.agda:9.3-19: warning: -W[no]OpenImportAbstract
'abstract' does not have any effect on 'open' so better place this
statement outside of the abstract block

Issue759a.agda:12.10-32: error: [ShouldBeRecordType]
Expected non-abstract record type, found Wrap
when checking that the expression record { wrapped = a } has type
Wrap A
